--- a/frontend/src/components/faq/faq.css
+++ b/frontend/src/components/faq/faq.css
@@ -1,5 +1,7 @@
 .faq {
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
     height: 100vh;
 }
@@ -7,6 +9,14 @@
 .faq-holder {
     width: 90%;
     padding: 1rem;
+    background-color: rgb(255, 255, 255, 0.2);
 }
 
-
+.faq-holder p {
+    font-size: 1.2rem;
+    margin-top: 2rem;
+    color: rgb(220, 51, 220);
+}
+.faq-holder span {
+    font-size: 0.8rem;
+}
