--- a/frontend/src/components/auth/signup.css
+++ b/frontend/src/components/auth/signup.css
@@ -1,6 +1,9 @@
-a {
-    /* text-decoration: none; */
-    color: white;
+:root {
+    --text: #1a110d;
+    --background: #fcfaf9;
+    --primary: #ae7563;
+    --secondary: #d1d0a7;
+    --accent: #b8c086;
 }
 
 .signup {
@@ -9,16 +12,31 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
-    color: white;
+    background-color: var(--background);
+    color: var(--text);
 }
 
 .signup form {
+    padding: 4% 4%;
+    border-radius: 8px;
+    border: --secondary 2px solid;
     display: flex;
     flex-direction: column;
+    color: var(--text);
+    background-color: var(--primary);
+    box-shadow: 0 0 12px 4px var(--primary);
+}
+
+.signup label {
+    color: var(--text);
+}
+
+.signup button {
+    color: var(--text);
 }
 
 input {
     padding: 1rem 4rem;
     margin: 1rem;
+    text-align: center;
 }
