--- a/frontend/src/components/profile/profile-creation.css
+++ b/frontend/src/components/profile/profile-creation.css
@@ -1,10 +1,19 @@
+:root {
+    --text: #1a110d;
+    --background: #fcfaf9;
+    --primary: #ae7563;
+    --secondary: #d1d0a7;
+    --accent: #b8c086;
+}
+
 .profile-create {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
     height: 100vh;
-    color: white;
+    color: var(--text);
+    background-color: var(--background);
 }
 
 .profile-create form {
